--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production remix build",
     "dev": "cross-env NODE_ENV=development remix dev",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@prismicio/client": "^6.4.0",
+    "@prismicio/helpers": "^2.2.0",
+    "@prismicio/react": "^2.1.2",
+    "@radix-ui/colors": "^0.1.8",
     "@remix-run/react": "^1.2.3",
     "@remix-run/vercel": "^1.2.3",
-    "@radix-ui/colors": "^0.1.8",
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6",
+    "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.2.3"
@@ -30,10 +36,11 @@
     "@types/react-dom": "^17.0.9",
     "cross-env": "^7.0.3",
     "eslint": "^8.9.0",
-    "typescript": "^4.5.5",
     "husky": "^7.0.4",
     "jest": "^27.4.5",
-    "lint-staged": "^12.3.1"
+    "lint-staged": "^12.3.1",
+    "slice-machine-ui": "^0.3.1",
+    "typescript": "^4.5.5"
   },
   "engines": {
     "node": ">=14"
