--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prismic-reactjs": "^1.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remix": "^1.2.3"
   },
   "devDependencies": {
